--- a/privacy.html
+++ b/privacy.html
@@ -20,7 +20,12 @@
   <!-- TOP HEADER BAR (LOGO + SEARCH + ACCOUNT LINKS) -->
  <header class="site-header">
   <div class="header-left">
-    <img src="images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" class="logo">
+    <a href="/index.html" title="Return to Homepage">
+      <img src="images/modular-gunworks-llc.png" 
+           alt="Modular Gunworks LLC Logo" 
+           class="logo" 
+           id="site-logo">
+    </a>
   </div>
 
   <div class="header-center">
